--- a/treatment/Makefile
+++ b/treatment/Makefile
@@ -5,9 +5,14 @@ ARFLAGS += -U
 
 DEBUG = -DDEBUG -g
 
-BINS = sludger
+# BINS = sludger
 
-FILES = sludger.o structs.o networking.o libscrypt/libscrypt.a
+# FILES = sludger.o structs.o networking.o libscrypt/libscrypt.a
+
+
+BINS = treatment
+
+FILES = treatment.o ../lib/listener.o ../lib/payloads.o ../lib/response.o
 
 all: build
 
