--- a/dummy/Makefile
+++ b/dummy/Makefile
@@ -1,4 +1,4 @@
-CPPFLAGS += -Wall -Wextra -Wpedantic -Wwrite-strings -Wstack-usage=1024 -Wfloat-equal -Waggregate-return -Winline -I
+CPPFLAGS += -Wall -Wextra -Wpedantic -Wwrite-strings -Wfloat-equal -Waggregate-return -Winline -I
 CPPFLAGS += -D_XOPEN_SOURCE -pthread
 CFLAGS += -std=c11 -lm 
 ARFLAGS += -U
