--- a/pretreatment/Makefile
+++ b/pretreatment/Makefile
@@ -1,36 +1,34 @@
-CPPFLAGS += -Wall -Wextra -Wpedantic -Wwrite-strings -Wstack-usage=1024 -Wfloat-equal -Waggregate-return -Winline -I
-CPPFLAGS += -D_XOPEN_SOURCE -pthread
-CFLAGS += -std=c11 -lm 
+CPPFLAGS += -Wall -Wextra -Wpedantic
+CPPFLAGS += -D_XOPEN_SOURCE -pthread -std=c11 -lm -lc -DDEBUG -g
 ARFLAGS += -U
 
 DEBUG = -DDEBUG -g
 
 BINS = pretreatment
 
-FILES = pretreatment.o ../lib/listener.o ../lib/payloads.o ../lib/response.o
+FILES = pretreatment.o ../lib/listener.o ../lib/payloads.o ../lib/response.o ../lib/chemicals.o
 
 all: build
 
 .PHONY: all
 
-debug: CFLAGS += -DDEBUG -g
-debug: CPPFLAGS += -DDEBUG -g
+# debug: CFLAGS += -DDEBUG -g
 debug:  $(FILES)
-	gcc -o $(BINS) $(FILES) $(CPPFLAGS) $(CFLAGS)
+	gcc49 -o $(BINS) $(FILES) $(CPPFLAGS) $(CFLAGS)
 	$(MAKE) clean
 
 profile: CFLAGS += -pg
 profile: CPPFLAGS += -pg
 profile: $(FILES)
-	gcc -o $(BINS) $(FILES) $(CPPFLAGS) $(CFLAGS)
+	gcc49 -o $(BINS) $(FILES) $(CPPFLAGS) $(CFLAGS)
 	$(MAKE) clean
 
 build: $(FILES)
-	gcc -o $(BINS) $(FILES) $(CPPFLAGS) $(CFLAGS)
+	gcc49 -o $(BINS) $(FILES) $(CPPFLAGS) $(CFLAGS)
 	$(MAKE) clean
 
 clean:
-	$(RM) *.o *.a
+	$(RM) *.o
 
 cleanAll:
-	$(RM) $(BINS) *.o *.a
+	$(RM) $(BINS) *.o
