Added graphs and handling of edges with 0

--- a/stormdrain/Makefile
+++ b/stormdrain/Makefile
@@ -7,7 +7,7 @@ DEBUG = -DDEBUG -g
 
 BINS = stormdrain
 
-FILES = stormdrain.o ../lib/listener.o ../lib/payloads.o ../lib/response.o ../lib/chemicals.o
+FILES = stormdrain.o ../lib/listener.o ../lib/payloads.o ../lib/response.o ../lib/chemicals.o ../lib/graph.o
 
 all: build
 
